--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -215,6 +215,26 @@
     </dependency>
 
     <dependency>
+      <groupId>org.glassfish.jersey.test-framework</groupId>
+      <artifactId>jersey-test-framework-core</artifactId>
+      <scope>test</scope>
+      <version>${jersey.version}</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>org.glassfish.jersey.test-framework.providers</groupId>-->
+<!--      <artifactId>jersey-test-framework-provider-jetty</artifactId>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+      <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+      <scope>test</scope>
+      <version>${jersey.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>jakarta.activation</groupId>
       <artifactId>jakarta.activation-api</artifactId>
     </dependency>
